Upgrade spring boot to 3.2M2